--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-    body, html {
-        height: 100%;
-        min-height: 100%;
+    html, body {
+        cursor: pointer;
+        touch-action: auto;
     }
    
     @font-face {
@@ -95,6 +95,12 @@ p {
     padding-left: 10px;
 }
 
+#dummy {
+    position: absolute;
+    left: -200px;
+    top: 0px;
+}
+
 @media screen and (max-width: 980px) and (min-width: 769px) {
 
     #backGround {
@@ -111,6 +117,7 @@ p {
         left: 2%;
         font-size: 30px;    
     } 
+
 }
 
 @media screen and (min-width: 641px) and (max-width: 768px) and (min-height: 900px) {
@@ -127,12 +134,7 @@ p {
     }
 
     #row-first {
-        height: 60%;
         padding-top: 5%;
-    }
-
-    #row-second {
-        height: 40%;
     }
 
     #ltrsGuessed {
@@ -144,6 +146,7 @@ p {
         left: 2%;
         font-size: 24px;    
     }
+
 }
 
 @media screen and (min-width: 641px) and (max-width: 768px) and (max-height: 899px) {
@@ -160,12 +163,7 @@ p {
     }
 
     #row-first {
-        height: 60%;
         padding-top: 5%;
-    }
-
-    #row-second {
-        height: 40%;
     }
 
     #ltrsGuessed {
@@ -182,6 +180,7 @@ p {
         left: 2%;
         font-size: 24px;    
     }
+
 }
 
 
@@ -251,13 +250,7 @@ p {
     }
 
     #row-first {
-        height: 60%;
         padding-top: 5%;
     }
-
-    #row-second {
-        height: 40%;
-    }
-    
 
 }
